# YoloSegment-2D-to-3D-RebotARM_Pick_and_Place

./: .gitattributes  .gitignore  LICENSE  README.md  justfile  pyproject.toml
DS/: analyze_dataset.py  capture.py  compare_models.py  convert_labelme_to_yolo.py  visualize_depth.py  yolo_classes.yaml
DS/prelabel/: README.md  composite_backgrounds.py  export_composite_labelme.py  export_synth_labelme.py  export_to_labelme.py  init_labeled_gaussians.py  labeled_gaussians.py  lift_rgbd.py  prelabel_images.py  prelabel_rgbd.py  promote_rgbd.py  render_synth_views.py  sam3_classes.yaml  synth_3dgs.py  synth_camera.py  view_lift_ply.py
REBOT/reBotArmController_ROS2/src/rebotarm_moveit_config/config/: rebotarm.urdf.xacro
REBOT/reBotArmController_ROS2/src/rebotarm_moveit_demos/: setup.py
TabletopSeg3D/3DDetection/scripts/: perception_node.py  realtime_open3d_scene.py
TabletopSeg3D/3DDetection/src/: pipeline.py  tracking.py  viz_2d.py  viz_3d.py  yaw_stats.py
TabletopSeg3D/3DDetection/src/camera/: __init__.py  realsense_capture.py
TabletopSeg3D/3DDetection/src/geometry/: __init__.py  pointcloud.py
TabletopSeg3D/3DDetection/src/robot/: detection_publisher.py  extrinsics.py  robot_pose.py
config/: class_colors.yaml  sense.yaml
docs/: perception-ros2-moveit.md  training-and-segmentation.md
handeye/: validate_base_frame.py
handeye/calibration_d405/: calibrate_handeye.py  capture_handeye.py  charuco_boox_go_103.json  charuco_utils.py  generate_charuco.py  transforms.py
scripts/: sense.sh
utils/: dataset_report.py
(+7 files in other folders)
